# 2048-solver

./: 2048.cabal  README
src/: Alphabeta.hs  HS2048.hs  Main.hs  Solver.lhs
