name: HS2048
version: 0.0.0.1
synopsis: A minimal Haskell port of 2048.
license: MIT
build-type: Simple
cabal-version:       >=1.10

library
  exposed-modules: HS2048, Alphabeta
  hs-source-dirs: src
  build-depends: base, text, haskeline, random, mtl, MonadRandom, HUnit
  ghc-options: -Wall
  default-language: Haskell2010

executable 2048
  main-is: src/Main.hs
  build-depends: base, HS2048
  ghc-options: -Wall
  default-language: Haskell2010

executable 2048Solver
  main-is: src/Solver.lhs
  build-depends: base, HS2048, logict, MonadRandom
  ghc-options: -Wall
  default-language: Haskell2010
